# spacecal-for-monado

./: .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  PKGBUILD  PKGBUILD-git  README.md  build-flatpak.sh  flake.nix
.github/workflows/: ci.yml  release.yml
data/: dev.oblivius.monado-spacecal.desktop  dev.oblivius.monado-spacecal.metainfo.xml  dev.oblivius.motoc-gui.desktop  dev.oblivius.motoc-gui.metainfo.xml  dev.oblivius.spacecal-for-monado.desktop  dev.oblivius.spacecal-for-monado.metainfo.xml
docs/: architecture.md
src/: config.rs  error.rs  lib.rs  main.rs  monado.rs  preset.rs
src/calibration/: continuous.rs  floor.rs  mod.rs  sampled.rs  transform.rs
src/ui/: device_list.rs  device_selector.rs  mod.rs  state.rs  window.rs
src/xr/: hand_tracking.rs  mndx.rs  mod.rs
tests/: threading_test.rs
