[package]
name = "spacecal-for-monado"
version = "0.1.0"
edition = "2024"
description = "VR tracking space calibrator for Monado"
repository = "https://github.com/99oblivius/spacecal-for-monado"
license = "MIT"
keywords = ["vr", "monado", "wivrn", "calibration", "tracking"]
categories = ["gui"]

[lib]
name = "spacecal_for_monado"
path = "src/lib.rs"

[[bin]]
name = "spacecal-for-monado"
path = "src/main.rs"

[dependencies]
dirs = "6.0.0"
gtk4 = { version = "0.10.3", features = ["v4_12"] }
libadwaita = { version = "0.8.1", features = ["v1_4"] }
async-channel = "2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
libmonado = "1.3.2"
openxr = { version = "0.19", features = ["linked"] }
nalgebra = "0.34"
mint = "0.5.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[profile.release]
lto = true
strip = true
